Fix align center widths

--- a/css/style.css
+++ b/css/style.css
@@ -7524,6 +7524,7 @@ figure {
 
 .align-center {
   clear: both;
+  display: inline;
   text-align: center;
 }
 .align-center img {
