--- a/scss/_drupal-bootstrap.scss
+++ b/scss/_drupal-bootstrap.scss
@@ -81,6 +81,7 @@ figure {
 
 .align-center {
   clear: both;
+  display: inline;
   text-align: center;
 
   img {
